--- a/distrib/source/trunk/README
+++ b/distrib/source/trunk/README
@@ -1,4 +1,4 @@
-		TANGO source code release version 9.2.5 - README (12/2016)
+		TANGO source code release version 9.2.5a - README (01/2017)
 		==========================================================
 
 
@@ -26,7 +26,7 @@ This is the README for the TANGO source code release. TANGO is a
 toolkit for building object oriented control systems based on CORBA ans ZMQ. 
 TANGO is a joint effort of the several European research institutes.
 
-This source code release is based on the latest version of TANGO 9 (9.2.5)
+This source code release is based on the latest version of TANGO 9 (9.2.5a)
 and is intended for Unix platforms. A binary version for Windows of TANGO 
 is available. The source code contained in this package 
 runs on Windows but the Makefile don't.
@@ -212,7 +212,7 @@ ready to be installed.
 Example (using mysql):								
         
 		Source code location:   ../..
-        Version:                9.2.5
+        Version:                9.2.5a
         Compiler:               gcc,g++
 
         OMNIORB PATH:           /segfs/tango/ORB/omniORB4.2.1/ubuntu1404
@@ -510,7 +510,8 @@ coherent include files.
 10 - QUESTIONS
 --------------
 
-You will definitely have some ! Send questions to tango@esrf.fr.
+You will definitely have some ! Send questions to info@tango-controls.org or on the 
+forum: http://www.tango-controls.org/community/forum
 
 11 - URL
 --------
@@ -524,6 +525,12 @@ documentation, news and to download add-on packages.
 
 See the file TANGO_CHANGES to get an overview of all modification
 between the different Tango library versions.
+
+Changes between Tango distribution 9.2.5 and 9.2.5a
+--------------------------------------------------
+
+- Updated Jive to                               Release 7.10
+- Updated JSSHTerminal to                       Release 1.10
 
 Changes between Tango distribution 9.2.2 and 9.2.5
 --------------------------------------------------
