--- a/README
+++ b/README
@@ -531,6 +531,8 @@ Changes between Tango distribution 9.2.5 and 9.2.5a
 
 - Updated Jive to                               Release 7.10
 - Updated JSSHTerminal to                       Release 1.10
+- Updated Astor to                              Release 7.0.9
+- Added DBBench                                 Release 1.3
 
 Changes between Tango distribution 9.2.2 and 9.2.5
 --------------------------------------------------
