--- a/assets/README
+++ b/assets/README
@@ -526,6 +526,25 @@ documentation, news and to download add-on packages.
 See the file TANGO_CHANGES to get an overview of all modification
 between the different Tango library versions.
 
+Changes between Tango distribution 9.2.5a and 9.3.3
+--------------------------------------------------
+
+- Updated C++ library to                        Release 9.3.3
+- Updated JTango to                             Release 9.5.13
+- Updated Jive to                               Release 7.19
+- Updated ATK to                                Release 9.2.39
+- Updated AtkPanel to                           Release 5.6
+- Updated atktuning to                          Release 4.7
+- Updated Astor to                              Release 7.2.1
+- Updated JSSHTerminal to                       Release 1.11
+- Updated LogViewer to                          Release 2.0.5
+- Updated Pogo to                               Release 9.6.16
+- Added rest-server                             Release 1.2
+- Updated TangoTest to                          Release 2.1
+- Updated TangoDatabase to                      Release 5.8
+- Updated TangoAccessControl to                 Release 2.14
+- Updated Starter to                            Release 7.0
+
 Changes between Tango distribution 9.2.5 and 9.2.5a
 --------------------------------------------------
 
