--- a/assets/README
+++ b/assets/README
@@ -1,4 +1,4 @@
-		TANGO source code release version 9.2.5a - README (01/2017)
+		TANGO source code release version 9.3.3 - README (03/2019)
 		==========================================================
 
 
@@ -539,7 +539,7 @@ Changes between Tango distribution 9.2.5a and 9.3.3
 - Updated JSSHTerminal to                       Release 1.11
 - Updated LogViewer to                          Release 2.0.5
 - Updated Pogo to                               Release 9.6.16
-- Added rest-server                             Release 1.2
+- Added rest-server                             Release 1.9
 - Updated TangoTest to                          Release 2.1
 - Updated TangoDatabase to                      Release 5.8
 - Updated TangoAccessControl to                 Release 2.14
