Update to latest available release versions Update Jive to          Release 7.21 Update ATK to           Release 9.3.2 Update AtkPanel to      Release 5.8 Update Astor to         Release 7.2.4 Update JSSHTerminal to  Release 1.13 Update Pogo to          Release 9.6.18 Update TangoDatabase to Release 5.9 Update tango_admin to   Release 1.14

--- a/assets/README
+++ b/assets/README
@@ -531,19 +531,20 @@ Changes between Tango distribution 9.2.5a and 9.3.3
 
 - Updated C++ library to                        Release 9.3.3
 - Updated JTango to                             Release 9.5.13
-- Updated Jive to                               Release 7.19
-- Updated ATK to                                Release 9.2.39
-- Updated AtkPanel to                           Release 5.6
+- Updated Jive to                               Release 7.21
+- Updated ATK to                                Release 9.3.2
+- Updated AtkPanel to                           Release 5.8
 - Updated atktuning to                          Release 4.7
-- Updated Astor to                              Release 7.2.1
-- Updated JSSHTerminal to                       Release 1.11
+- Updated Astor to                              Release 7.2.4
+- Updated JSSHTerminal to                       Release 1.13
 - Updated LogViewer to                          Release 2.0.5
-- Updated Pogo to                               Release 9.6.16
+- Updated Pogo to                               Release 9.6.18
 - Added rest-server                             Release 1.9
 - Updated TangoTest to                          Release 2.1
-- Updated TangoDatabase to                      Release 5.8
+- Updated TangoDatabase to                      Release 5.9
 - Updated TangoAccessControl to                 Release 2.14
 - Updated Starter to                            Release 7.0
+- Updated tango_admin to                        Release 1.14
 
 Changes between Tango distribution 9.2.5 and 9.2.5a
 --------------------------------------------------
