--- a/assets/README
+++ b/assets/README
@@ -601,25 +601,26 @@ documentation, news and to download add-on packages.
 See the file TANGO_CHANGES to get an overview of all modification
 between the different Tango library versions.
 
-Changes between Tango distribution 9.2.5a and 9.3.3
+Changes between Tango distribution 9.2.5a and 9.3.4
 --------------------------------------------------
 
-- Updated C++ library to                        Release 9.3.3
-- Updated JTango to                             Release 9.5.15
+- Updated C++ library to                        Release 9.3.4
+- Updated JTango to                             Release 9.5.18
 - Updated Jive to                               Release 7.22
-- Updated ATK to                                Release 9.3.6
+- Updated ATK to                                Release 9.3.14
 - Updated AtkPanel to                           Release 5.8
 - Updated atktuning to                          Release 4.7
-- Updated Astor to                              Release 7.2.7
+- Updated Astor to                              Release 7.2.10
+- Added dbbench                                 Release 1.3
 - Updated JSSHTerminal to                       Release 1.16
 - Updated LogViewer to                          Release 2.0.5
-- Updated Pogo to                               Release 9.6.23
+- Updated Pogo to                               Release 9.6.25
 - Added rest-server                             Release 1.14
 - Updated TangoTest to                          Release 2.1
-- Updated TangoDatabase to                      Release 5.12
+- Updated TangoDatabase to                      Release 5.14
 - Updated TangoAccessControl to                 Release 2.14
-- Updated Starter to                            Release 7.2
-- Updated tango_admin to                        Release 1.14
+- Updated Starter to                            Release 7.3
+- Updated tango_admin to                        Release 1.15
 - Removed Pogo 6
 
 Changes between Tango distribution 9.2.5 and 9.2.5a
